<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentTop="true">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/background_light"
                android:layout_margin="18dp"
                android:elevation="4dp"
                app:cardElevation="8dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:padding="6dp"
                        android:text="@string/next_departure_time"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/university"
                                android:textAlignment="center"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/textView_location_universityDepartureTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="-"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold"/>

                        </LinearLayout>

                        <View
                            android:layout_height="match_parent"
                            android:layout_width="1dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@android:color/darker_gray" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tbs"
                                android:textAlignment="center"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/textView_location_tbsDepartureTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="-"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold"/>

                        </LinearLayout>

                        <View
                            android:layout_height="match_parent"
                            android:layout_width="1dp"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@android:color/darker_gray" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:paddingTop="6dp"
                            android:paddingBottom="6dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/college"
                                android:textAlignment="center"
                                android:textColor="@android:color/black" />

                            <TextView
                                android:id="@+id/textView_location_collegeDepartureTime"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="-"
                                android:textAlignment="center"
                                android:textColor="@android:color/black"
                                android:textStyle="bold"/>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/btn_location_traffic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_marginBottom="36dp"
            android:padding="0dp"
            android:clickable="true"
            android:src="@drawable/ic_traffic"
            app:backgroundTint="@android:color/background_light"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:elevation="4dp"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/location_noServiceLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#CC8E8E8E"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_light"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_no_bus_available"
                android:textColor="@android:color/black"
                android:padding="12dp"/>

        </LinearLayout>


    </LinearLayout>

</FrameLayout>